overflow-x fix

--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -8,17 +8,16 @@
   box-sizing: border-box;
 }
 
+html, body {
+  overflow-x: hidden;
+}
+
 html {
   color: #555;
   font-family: 'Lato', sans-serif;
   font-size: 20px;
   font-weight: 300;
   text-rendering: optimizeLegibility;
-}
-
-body {
-  width: 100%;
-  overflow-x: hidden;
 }
 
 .clearfix {
